--- a/runner/docker/Dockerfile.runtime
+++ b/runner/docker/Dockerfile.runtime
@@ -4,16 +4,17 @@ FROM nvidia/cuda:12.6.1-runtime-ubuntu24.04
 # Copy already built ffmpeg
 COPY --from=ffmpeg-build /compiled /usr/local
 
+# Copy mediamtx and config
+RUN apt-get update && apt-get install -y curl
+COPY --from=bluenviron/mediamtx:1.9.0 /mediamtx .
+COPY mediamtx.yml .
+
 # python stuff and wrapper
 RUN apt-get update && apt-get install -y python-is-python3 python3-venv
 RUN python -m venv my-venv && . my-venv/bin/activate
 ENV PATH="/my-venv/bin:$PATH"
 RUN python -m pip install --upgrade pip setuptools && pip install flask
-COPY frames.py .
-
-# Copy mediamtx and config
-COPY --from=bluenviron/mediamtx:1.9.0 /mediamtx .
-COPY mediamtx.yml .
+COPY frames2video.py .
 
 # program wrapper
 COPY run.sh .
