ci(runner): disable fail fast for batch docker ci
This commit ensure that if one container build fails the other
containers still are build.

--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -17,7 +17,7 @@ on:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   build-and-push-docker-images:
@@ -28,6 +28,7 @@ jobs:
       contents: read
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         dockerfile:
           - docker/Dockerfile.segment_anything_2
