--- a/runner/docker/Dockerfile.live-base-streamdiffusion
+++ b/runner/docker/Dockerfile.live-base-streamdiffusion
@@ -22,8 +22,9 @@ RUN pip install --no-cache-dir \
 # Install StreamDiffusion @ 765d71029b1404b94aee2865178d71c257c20318 (latest at time of writing)
 RUN pip install git+https://github.com/cumulo-autumn/StreamDiffusion.git@765d710#egg=streamdiffusion[tensorrt]
 
-# Install TensorRT extension
-RUN python -m streamdiffusion.tools.install-tensorrt
+# Install TensorRT extension (requires huggingface-hub)
+RUN pip install --no-cache-dir huggingface-hub==0.23.2 && \
+    python -m streamdiffusion.tools.install-tensorrt
 
 WORKDIR /app
 
