--- a/runner/docker/Dockerfile.live-base-streamdiffusion
+++ b/runner/docker/Dockerfile.live-base-streamdiffusion
@@ -16,7 +16,7 @@ RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 
 RUN pip install --no-cache-dir \
     torch==2.1.0 \
     torchvision==0.16.0 \
-    xformers \
+    xformers===0.0.22.post7 \
     --index-url https://download.pytorch.org/whl/cu121
 
 # Install StreamDiffusion @ 765d71029b1404b94aee2865178d71c257c20318 (latest at time of writing)
