--- a/.github/workflows/ai-runner-pipelines-fps-test.yaml
+++ b/.github/workflows/ai-runner-pipelines-fps-test.yaml
@@ -8,24 +8,39 @@ on:
   push:
     branches:
       - main
+      - "hjp/*"
     tags:
-      - '*'
+      - "*"
     paths:
       - "runner/**"
+      - ".github/workflows/ai-runner-pipelines-fps-test.yaml"
       - "!runner/.devcontainer/**"
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   run-fps-test:
-    runs-on: ubuntu-latest
+    runs-on: gpu-amd64
     strategy:
       max-parallel: 1
       matrix:
         model_config:
-          - { id: noop, input_fps: 30, exp_output_fps: 28 }
-          - { id: liveportrait, input_fps: 30, exp_output_fps: 28 }
-          - { id: streamdiffusion, input_fps: 30, exp_output_fps: 28 }
-          - { id: comfyui, input_fps: 30, exp_output_fps: 28 } # only depth anything for now
+          - id: noop
+            input_fps: 30
+            exp_output_fps: 28
+          - id: liveportrait
+            input_fps: 30
+            exp_output_fps: 28
+          - id: streamdiffusion
+            input_fps: 30
+            exp_output_fps: 28
+          - id: comfyui
+            input_fps: 30
+            exp_output_fps: 28 # only depth anything for now
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,7 +50,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.3'
+          go-version: "1.23.3"
 
       - name: Build Docker images
         env:
@@ -50,7 +65,7 @@ jobs:
               docker build -t livepeer/ai-runner:live-app-${MODEL_ID} -f docker/Dockerfile.live-app__PIPELINE__ --build-arg PIPELINE=${MODEL_ID} .
           fi
           cd ..
-      
+
       - name: Install packages
         run: |
           sudo sh -c "apt-get update && apt-get install -y libzmq3-dev && rm -rf /var/lib/apt/lists/*"
@@ -76,7 +91,7 @@ jobs:
             -modelid=${MODEL_ID} \
             -inputfps=${INPUT_FPS} \
             -expoutputfps=${EXP_OUTPUT_FPS} 2>&1 | tee output.log
-          
+
           # Use grep with the timestamp pattern to find the TEST PASSED/FAILED message
           if grep -q "INFO TEST PASSED!" output.log; then
             echo "Test for ${MODEL_ID} pipeline PASSED"
