--- a/runner/docker/Dockerfile.live-app-noop
+++ b/runner/docker/Dockerfile.live-app-noop
@@ -27,7 +27,8 @@ RUN pip install --no-cache-dir \
     transformers==4.43.3 \
     aiohttp==3.10.9 \
     pyzmq==26.2.0 \
-    nvidia-ml-py==12.560.30
+    nvidia-ml-py==12.560.30 \
+    opencv-python==4.10.0.84
 
 # Set environment variables
 ENV MAX_WORKERS=1
